Finished the logout button for homenavbar (so it works in home and profile page)
