# backend/api/openapi.yaml
@@ -174,6 +174,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /v0/logout:
+    get:
+      description: Logs out a user when the button ("Sign out") is clicked
+      parameters:
+      - name: signOut
+        in: query
+        required: false
+        description: Boolean value to see if user is logged in or out
+        schema:
+          type: boolean
+      responses:
+        200:
+          description: Logged out
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        404:
+          description: Unable to logout
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Error:
